V0.19 - (xx-10-2011)
Started work on a particle engine, future versions will have better effects.
Added animated thruster flames.
Implemented sprite-sheet handling, adapted explosions to utilize this new feature.
Added a screen rumble class, and utilized on boss death.
Improved "support ships", more movement types implemented.
Reworked all drawing code to go through texture_class::texture.xxx.draw();
Improved rendering, angles are also now supported.
Implemented per-generated sin/cos look up tables for faster calculations.
Bosses now have large health bars.
Removed some redundant game resources, loading should now be slightly faster.
Many tweaks and and a few bug fixes.
LOC - 15143

V0.18 - (03-09-2011)
Improved "support ships"
Created some variety with regards to NPC speed and size.
Did a major code clean up.
New pause button for touch screen support.
New death,next_level,outro screens created.
Mouse, joystick, keyboard support for menu.
Rewrote menu system, created new menu.
Many tweaks and and a few bug fixes.
LOC - 14363

V0.17 - (02-08-2011)
Touchscreen support, with on screen controls.
Bomb power-ups now a stackable, usable item.
Ship flashes and is immune briefly, on starting a level.
Created a new backend framework. (RAGE)
Improved IO, config, log, save/load, texture, sound and music systems.
Re-wrote font system, now uses SDL_ttf.
Star.P.G. now compiles and runs on Linux.
Larger variety of explosions added.
Many tweaks and and a few bug fixes.
LOC - 13691

V0.16 - (03-07-2011)
Side-ships Added, with power-ups.
Bomb power-up added, kills everything on screen.
Enemy ships flash when hit and not killed.
Level progress bar added.
Many tweaks and and a few bug fixes.
LOC - 11307

V0.15 - (05-03-2011)
Improved rendering system.
Implemented initial game-pad/joystick support, incomplete!
Many tweaks and and a few bug fixes.
LOC - 10166

V0.14 - (14-02-2011)
Fixed Weapon level up display bug.
Improved vertical scrolling.
Added different movement types for bullets.