@@ -54,13 +54,21 @@ void init_thrusters(bool re_init)
         game_o.thruster[0].frame          = 0;
         game_o.thruster[0].frame_max      = texture.thrusters_000.frame_max;
         game_o.thruster[0].fire.init();
-        game_o.thruster[0].fire.set_emitter_state    (true , true, 128);
+        game_o.thruster[0].fire.set_emitter_state    (true , true, 32);
         game_o.thruster[0].fire.set_emitter_pos      (0.0f , 0.0f, 0.06f);
         game_o.thruster[0].fire.set_emitter_image    (texture.particle_000.ref_number, 0.055f, 0.055f);
         game_o.thruster[0].fire.set_emitter_movement (0.02f, 0.0025f,  0.0025f, 0.0025f, 270,50, 0.0f, 0.0f, 0.0f);
         game_o.thruster[0].fire.set_emitter_rates    (0, 0, 0.075f, 8);
-        game_o.thruster[0].fire.set_emitter_color    (1.0f, 1.0f, 0.0f, 1.0f , 0.0f, 0.0f);
+        game_o.thruster[0].fire.set_emitter_color    (0.0f, 0.0f, 1.0f, 0.75f , 0.75f, 0.75f);
         game_o.thruster[0].fire.set_emitter_velocity (0.0f,0.0f,0.0f );
+        game_o.thruster[0].smoke.init();
+        game_o.thruster[0].smoke.set_emitter_state    (true , true, 4);
+        game_o.thruster[0].smoke.set_emitter_pos      (0.0f , 0.0f, 0.06f);
+        game_o.thruster[0].smoke.set_emitter_image    (texture.particle_002.ref_number, 0.075f, 0.075f);
+        game_o.thruster[0].smoke.set_emitter_movement (0.01f, 0.001f,  0.001f, 0.001f, 270,50, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[0].smoke.set_emitter_rates    (2, 0, 0.0250f, 8);
+        game_o.thruster[0].smoke.set_emitter_color    (0.7f, 0.7f, 0.7f, 0.0f , 0.0f, 0.0f);
+        game_o.thruster[0].smoke.set_emitter_velocity (0.0f,0.0f,0.0f );
 
         game_o.thruster[1].name           = L"Seismic Thrusters";
         game_o.thruster[1].active         = false;
@@ -74,13 +82,21 @@ void init_thrusters(bool re_init)
         game_o.thruster[1].frame          = 0;
         game_o.thruster[1].frame_max      = texture.thrusters_001.frame_max;
         game_o.thruster[1].fire.init();
-        game_o.thruster[1].fire.set_emitter_state    (true , true, 128);
+        game_o.thruster[1].fire.set_emitter_state    (true , true, 32);
         game_o.thruster[1].fire.set_emitter_pos      (0.0f , 0.0f, 0.06f);
         game_o.thruster[1].fire.set_emitter_image    (texture.particle_000.ref_number, 0.055f, 0.055f);
-        game_o.thruster[1].fire.set_emitter_movement (0.02f, 0.0002f,  0.0002f, 0.0002f, 270,30, 0.0f, 0.0f, 0.0f);
-        game_o.thruster[1].fire.set_emitter_rates    (0, 0, 0.015f, 8);
+        game_o.thruster[1].fire.set_emitter_movement (0.02f, 0.0025f,  0.0025f, 0.0025f, 270,40, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[1].fire.set_emitter_rates    (0, 0, 0.075f, 8);
         game_o.thruster[1].fire.set_emitter_color    (1.0f, 1.0f, 0.0f, 1.0f , 0.0f, 0.0f);
         game_o.thruster[1].fire.set_emitter_velocity (0.0f,0.0f,0.0f );
+        game_o.thruster[1].smoke.init();
+        game_o.thruster[1].smoke.set_emitter_state    (true , true, 4);
+        game_o.thruster[1].smoke.set_emitter_pos      (0.0f , 0.0f, 0.06f);
+        game_o.thruster[1].smoke.set_emitter_image    (texture.particle_002.ref_number, 0.075f, 0.075f);
+        game_o.thruster[1].smoke.set_emitter_movement (0.01f, 0.001f,  0.001f, 0.001f, 270,50, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[1].smoke.set_emitter_rates    (2, 0, 0.0250f, 8);
+        game_o.thruster[1].smoke.set_emitter_color    (0.7f, 0.7f, 0.7f, 0.0f , 0.0f, 0.0f);
+        game_o.thruster[1].smoke.set_emitter_velocity (0.0f,0.0f,0.0f );
 
         game_o.thruster[2].name           = L"Vortex Thrusters";
         game_o.thruster[2].active         = false;
@@ -94,13 +110,21 @@ void init_thrusters(bool re_init)
         game_o.thruster[2].frame          = 0;
         game_o.thruster[2].frame_max      = texture.thrusters_002.frame_max;
         game_o.thruster[2].fire.init();
-        game_o.thruster[2].fire.set_emitter_state    (true , true, 128);
+        game_o.thruster[2].fire.set_emitter_state    (true , true, 32);
         game_o.thruster[2].fire.set_emitter_pos      (0.0f , 0.0f, 0.06f);
         game_o.thruster[2].fire.set_emitter_image    (texture.particle_000.ref_number, 0.055f, 0.055f);
-        game_o.thruster[2].fire.set_emitter_movement (0.02f, 0.0002f,  0.0002f, 0.0002f, 270,30, 0.0f, 0.0f, 0.0f);
-        game_o.thruster[2].fire.set_emitter_rates    (0, 0, 0.015f, 8);
-        game_o.thruster[2].fire.set_emitter_color    (1.0f, 1.0f, 0.0f, 1.0f , 0.0f, 0.0f);
+        game_o.thruster[2].fire.set_emitter_movement (0.02f, 0.0025f,  0.0025f, 0.0025f, 270,40, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[2].fire.set_emitter_rates    (0, 0, 0.075f, 8);
+        game_o.thruster[2].fire.set_emitter_color    (0.5f, 0.5f, 0.0f, 1.0f , 0.0f, 0.0f);
         game_o.thruster[2].fire.set_emitter_velocity (0.0f,0.0f,0.0f );
+        game_o.thruster[2].smoke.init();
+        game_o.thruster[2].smoke.set_emitter_state    (true , true, 4);
+        game_o.thruster[2].smoke.set_emitter_pos      (0.0f , 0.0f, 0.06f);
+        game_o.thruster[2].smoke.set_emitter_image    (texture.particle_002.ref_number, 0.075f, 0.075f);
+        game_o.thruster[2].smoke.set_emitter_movement (0.01f, 0.001f,  0.001f, 0.001f, 270,50, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[2].smoke.set_emitter_rates    (2, 0, 0.0250f, 8);
+        game_o.thruster[2].smoke.set_emitter_color    (0.7f, 0.7f, 0.7f, 0.0f , 0.0f, 0.0f);
+        game_o.thruster[2].smoke.set_emitter_velocity (0.0f,0.0f,0.0f );
 
         game_o.thruster[3].name           = L"Convolution Thrusters";
         game_o.thruster[3].active         = false;
@@ -114,13 +138,21 @@ void init_thrusters(bool re_init)
         game_o.thruster[3].frame          = 0;
         game_o.thruster[3].frame_max      = texture.thrusters_003.frame_max;
         game_o.thruster[3].fire.init();
-        game_o.thruster[3].fire.set_emitter_state    (true , true, 128);
+        game_o.thruster[3].fire.set_emitter_state    (true , true, 32);
         game_o.thruster[3].fire.set_emitter_pos      (0.0f , 0.0f, 0.06f);
         game_o.thruster[3].fire.set_emitter_image    (texture.particle_000.ref_number, 0.055f, 0.055f);
-        game_o.thruster[3].fire.set_emitter_movement (0.02f, 0.0002f,  0.0002f, 0.0002f, 270,30, 0.0f, 0.0f, 0.0f);
-        game_o.thruster[3].fire.set_emitter_rates    (0, 0, 0.015f, 8);
-        game_o.thruster[3].fire.set_emitter_color    (1.0f, 1.0f, 0.0f, 1.0f , 0.0f, 0.0f);
+        game_o.thruster[3].fire.set_emitter_movement (0.02f, 0.0025f,  0.0025f, 0.0025f, 270,40, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[3].fire.set_emitter_rates    (0, 0, 0.075f, 8);
+        game_o.thruster[3].fire.set_emitter_color    (0.0f, 0.0f, 1.0f, 0.1f , 0.1f, 0.3f);
         game_o.thruster[3].fire.set_emitter_velocity (0.0f,0.0f,0.0f );
+        game_o.thruster[3].smoke.init();
+        game_o.thruster[3].smoke.set_emitter_state    (true , true, 4);
+        game_o.thruster[3].smoke.set_emitter_pos      (0.0f , 0.0f, 0.06f);
+        game_o.thruster[3].smoke.set_emitter_image    (texture.particle_002.ref_number, 0.075f, 0.075f);
+        game_o.thruster[3].smoke.set_emitter_movement (0.01f, 0.001f,  0.001f, 0.001f, 270,50, 0.0f, 0.0f, 0.0f);
+        game_o.thruster[3].smoke.set_emitter_rates    (2, 0, 0.0250f, 8);
+        game_o.thruster[3].smoke.set_emitter_color    (0.7f, 0.7f, 0.7f, 0.0f , 0.0f, 0.0f);
+        game_o.thruster[3].smoke.set_emitter_velocity (0.0f,0.0f,0.0f );
     }
 };
 
@@ -128,6 +160,7 @@ void proc_thrusters(void)
 {
     for (int thruster_count = 0; thruster_count < MAX_THRUSTERS; thruster_count++)
     {
+        game_o.thruster[thruster_count].smoke.process();
         game_o.thruster[thruster_count].fire.process();
         game_o.thruster[thruster_count].frame++;
         if (game_o.thruster[thruster_count].frame > game_o.thruster[thruster_count].frame_max) game_o.thruster[thruster_count].frame = 0;
@@ -136,6 +169,7 @@ void proc_thrusters(void)
 
 void draw_thrusters(void)
 {
+    game_o.thruster[game_o.player.thrusters].smoke.draw();
     game_o.thruster[game_o.player.thrusters].fire.draw();
 };
 
